2008-11-30 Ian Rutt
 * Corrected <config.inc> to "config.inc" to conform to strict usage
   required by gfortran 4.4.0

2008-05-08 Ian Rutt
 * Merged changes from RELEASE_1_0_0_BRANCH into trunk, as below:

2008-04-03 Ian Rutt
 * Corrected comments in GLINT API - wrong units for water_in and
 water_out. Spotted by Jeremy Fyke.

2008-04-02 Ian Rutt
 * Fixed build issue with INTENT in gfortran. Thanks to Maria Kotjakova
   for pointing this out.
	
2008-03-13 Ian Rutt
 * Fixed bug in temperature basal boundary condition. Sliding heat
 generation terms were wrong. EISMINT 2 tests G and H now look better.

2008-03-01 Ian Rutt
 * Fixed precision mismatch build bug in glint_example_clim.F90

2008-01-23 Ian Rutt
 * Changed sine-wave fitting to temperature to be true by default.

2008-01-21 Ian Rutt
 * Fixed problem with GLINT output files in restart code

2008-01-18 Ian Rutt
 * Fixed precision bug in complex restart code.

2008-01-17 Ian Rutt
 * Fixed build problem with restarts (added handling of complex arrays)
 * This is currently untested.
 * Made single-precision compiling a configure option (use --enable-sp)

2008-01-16 Ian Rutt
 * Modified configure.in and bootstrap to reflect Magi's changes to main
   trunk. These allow configuration with later versions of automake
 * Fixed limitations of this code (failed if particular combinations of
   versions of automake installed)

2007-10-23 Ian Rutt
 * glint.F90: added basic capability to extract raw forcing climate for
   diagnostic purposes
 * Fixed bug in glint_example_clim.F90 that prevented single-precision builds
	
2007-08-31 Ian Rutt
 * Thorough revamp of glint example. Simplified so that all data must be
 on the same grid now, and streamlined code.

2007-08-29 Ian Rutt
 * Changed precip anomaly coupling to be additive, but with option to use
 multiplicative version instead.

2007-08-28 Ian Rutt
 * Fixed bugs with anomaly coupling - should all be working now.

2007-08-23 Ian Rutt