@@ -109,7 +109,7 @@ fi
 
 rm -rf autom4te.cache
 
-$ACLOCAL \
+$ACLOCAL -I m4macros\
 && $AUTOHEADER \
 && $AUTOMAKE --gnu --add-missing \
 && $AUTOCONF
