@@ -6,6 +6,9 @@
 /* Define to 1 if you want to enable extended restarts */
 #undef GLIMMER_SP
 
+/* Define if you have a BLAS library. */
+#undef HAVE_BLAS
+
 /* Define to 1 if you have the `' library (-l). */
 #undef HAVE_LIB
 
